--- a/index.html
+++ b/index.html
@@ -9,26 +9,27 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
-
+  <link rel="stylesheet" href="./styles/style.css">
 </head>
 
 <body>
-  Victor Crest
-  26
-  London
+  <img class="circle-top" src="./images/bg-pattern-top.svg" alt="">
+  <img class="circle-bottom" src="./images/bg-pattern-bottom.svg" alt="">
+  <!-- <div class="card">
+    Victor Crest
+    26
+    London
 
-  80K
-  Followers
+    80K
+    Followers
 
-  803K
-  Likes
+    803K
+    Likes
 
-  1.4K
-  Photos
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+    1.4K
+    Photos
+  </div> -->
+
 </body>
 
 </html>
