card nearly complete. need bg and img work

--- a/index.html
+++ b/index.html
@@ -14,20 +14,35 @@
 
 <body>
 
-  <!-- <div class="card">
-    Victor Crest
-    26
-    London
+  <div class="card">
+    <div class="container">
+      <div class="container-top">
+      </div>
+      <div class="container-bottom">
+        <img class="user-photo" src="/images/image-victor.jpg" alt="">
+        <div class="user-name-container">
+          <h2 class="user-name">Victor Crest</h2><span class="age">26</span>
+        </div>
 
-    80K
-    Followers
+        <span class="location">London</span>
+      </div>
 
-    803K
-    Likes
-
-    1.4K
-    Photos
-  </div> -->
+      <section class="stats">
+        <div class="metric-container">
+          <span class="number">80K</span>
+          <span class="metric">Followers</span>
+        </div>
+        <div class="metric-container">
+          <span class="number">803K</span>
+          <span class="metric">Likes</span>
+        </div>
+        <div class="metric-container">
+          <span class="number">1.4K</span>
+          <span class="metric">Photos</span>
+        </div>
+      </section>
+    </div>
+  </div>
 
 </body>
 
