'.' added to image links

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="container-top">
       </div>
       <div class="container-bottom">
-        <img class="user-photo" src="/images/image-victor.jpg" alt="">
+        <img class="user-photo" src="./images/image-victor.jpg" alt="">
         <div class="user-name-container">
           <h2 class="user-name">Victor Crest</h2><span class="age">26</span>
         </div>
