screenshot added, README updated, section changed to div

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <span class="location">London</span>
       </div>
 
-      <section class="stats">
+      <div class="stats">
         <div class="metric-container">
           <span class="number">80K</span>
           <span class="metric">Followers</span>
@@ -40,7 +40,7 @@
           <span class="number">1.4K</span>
           <span class="metric">Photos</span>
         </div>
-      </section>
+      </div>
     </div>
   </div>
 
