--- a/index.html
+++ b/index.html
@@ -13,37 +13,37 @@
 </head>
 
 <body>
+  <main>
+    <div class="card">
+      <div class="container">
+        <div class="container-top">
+        </div>
+        <div class="container-bottom">
+          <img class="user-photo" src="./images/image-victor.jpg" alt="">
+          <div class="user-name-container">
+            <h1 class="user-name">Victor Crest</h1><span class="age">26</span>
+          </div>
 
-  <div class="card">
-    <div class="container">
-      <div class="container-top">
-      </div>
-      <div class="container-bottom">
-        <img class="user-photo" src="./images/image-victor.jpg" alt="">
-        <div class="user-name-container">
-          <h2 class="user-name">Victor Crest</h2><span class="age">26</span>
+          <span class="location">London</span>
         </div>
 
-        <span class="location">London</span>
-      </div>
-
-      <div class="stats">
-        <div class="metric-container">
-          <span class="number">80K</span>
-          <span class="metric">Followers</span>
-        </div>
-        <div class="metric-container">
-          <span class="number">803K</span>
-          <span class="metric">Likes</span>
-        </div>
-        <div class="metric-container">
-          <span class="number">1.4K</span>
-          <span class="metric">Photos</span>
+        <div class="stats">
+          <div class="metric-container">
+            <span class="number">80K</span>
+            <span class="metric">Followers</span>
+          </div>
+          <div class="metric-container">
+            <span class="number">803K</span>
+            <span class="metric">Likes</span>
+          </div>
+          <div class="metric-container">
+            <span class="number">1.4K</span>
+            <span class="metric">Photos</span>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-
+  </main>
 </body>
 
 </html>
